# vo_backend

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  README.md  imu_buf.hpp  imu_vo_initializer.hpp  main.cpp  package.xml
src/launch/: vo_backend.launch
src/src/: imu_buf.hpp  imu_vo_initializer.hpp  imu_vo_interface.hpp  main.cpp  note.md
src/src/marginlization/: Marginalization.cpp
src/test/: test_from_2_vector.cpp
